updated project information, added project modal popups, fixed the hero text animation bugging on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -247,6 +247,11 @@
 		height: 304.89px;
 	}
 
+	.popup_content_area .mfp-close {
+		right: 20px;
+		top: 20px;
+	}
+
 	/* resume section */
 	.resume-section {
 		padding-top: 80px;
@@ -365,6 +370,10 @@
 		gap: 30px;
 	}
 
+	#main-detail {
+		position: relative;
+	}
+
 	.hero-content-box .lead, .hero-content-box .lead2 {font-size: 15px;}
 	.lead .purple-grad {font-size: 16px;}
 
@@ -438,6 +447,10 @@
 		column-gap: 15px;
 		row-gap: 20px;
 	}
+	.popup_content_area .mfp-close {
+		right: 0;
+		top: 0;
+	}
 	.popup_modal_content .portfolio_gallery {
 		margin-top: 40px;
 	}
@@ -475,9 +488,13 @@
 
 	.portfolio-box .image-box img{
 		width: 480px;
-		height: 485.88px;
+		height: auto;
 	}
 
+	.language__img {
+		width: 100%;}
+		.language {
+			width: 25%;}
 	/* resume section */
 	.resume-section {
 		padding-top: 60px;
